# inspectre

./: .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  log.rs  main.rs
src-tauri/src/commands/: bench.rs  capture.rs  cpu.rs  graphics.rs  lab.rs  mainboard.rs  memory.rs  mod.rs
src-tauri/src/probes/: mod.rs
src-tauri/src/probes/bench/: mod.rs  types.rs  workloads.rs
src-tauri/src/probes/cpu/: codenames.rs  mod.rs  types.rs
src-tauri/src/probes/graphics/: mod.rs  types.rs
src-tauri/src/probes/mainboard/: mod.rs  types.rs
src-tauri/src/probes/memory/: mod.rs  types.rs
src-tauri/src/util/: mod.rs
src/assets/css/: main.css
src/components/features/: SectionPlaceholder.vue
src/components/features/bench/: BenchPage.vue
src/components/features/cpu/: CpuFrequencyCard.vue  CpuPage.vue  CpuSensorsCard.vue  CpuUsageCard.vue
src/components/features/graphics/: GraphicsAdapterCard.vue  GraphicsPage.vue
src/components/features/lab/: LabIconsPage.vue
src/components/features/mainboard/: MainboardPage.vue
src/components/features/memory/: MemoryModulesCard.vue  MemoryOverviewCard.vue  MemoryPage.vue  MemoryUsageCard.vue
src/components/ui/: AppButton.vue  AppCard.vue  AppDataRow.vue  AppField.vue  AppValue.vue
src/composables/: useBenchRunner.ts  useCpuLiveStream.ts  useFeedback.ts  useHardwareProbe.ts  useMemoryLiveStream.ts
src/i18n/locales/pt-BR/: bench.json  common.json  cpu.json  errors.json  graphics.json  lab.json  mainboard.json  memory.json  shell.json
src/shared/: format.ts
src/utils/: logger.ts
