[package]
name = "inspectre"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inspectre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
raw-cpuid = "11.6.0"
sysinfo = "0.39.1"
wmi = "0.18.4"
windows = { version = "0.62.2", features = ["Win32_System_SystemInformation", "Win32_Graphics_Dxgi", "Win32_System_WindowsProgramming"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
winreg = "0.56.0"

