[package]
name = "inspectre"
version = "0.1.0"
description = "Inspeção de hardware no Windows. Reimplementação livre do CPU-Z em Tauri 2, Rust e Vue 3."
authors = ["Gabriel Silva"]
license = "MIT"
repository = "https://github.com/oGabrielSilva/inspectre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inspectre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
raw-cpuid = "11.6.0"
sysinfo = "0.39.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
sha2 = "0.11.0"
aes = "0.9.0"
cipher = "0.5.1"
rayon = "1.12.0"
chrono = "0.4.44"
image = "0.25.10"
xcap = "0.9.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"

[target.'cfg(windows)'.dependencies]
wmi = "0.18.4"
windows = { version = "0.62.2", features = ["Win32_System_SystemInformation", "Win32_Graphics_Dxgi", "Win32_System_WindowsProgramming"] }
winreg = "0.56.0"

